# ValaCalc

./: README.md  meson.build  org.gnome.Valacalc.json
_build/meson-logs/: meson-log.txt
data/: meson.build  org.gnome.Valacalc.appdata.xml.in  org.gnome.Valacalc.desktop.in  org.gnome.Valacalc.gschema.xml
po/: POTFILES  meson.build
src/: main.vala  meson.build  valacalc.gresource.xml  window.ui  window.vala
